--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+<!--                         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="/llm-app">LLM Ranking</a></li> -->
                     </ul>
@@ -67,9 +67,9 @@
             </div>
         </section>
         <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+        <!--<section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
-                <!-- Featured Project Row-->
+                
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project One Row-->
+
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
                     <div class="col-lg-6">
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project Two Row-->
+
                 <div class="row gx-0 justify-content-center">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Signup-->
         <section class="signup-section" id="signup">
             <div class="container px-4 px-lg-5">
